fixed z-index overlay

--- a/guesthouse.css
+++ b/guesthouse.css
@@ -215,7 +215,7 @@ hr {
     height: 100%;
     width: 0;
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 21; /* Sit on top */
     left: 0;
     top: 0;
     background-color: cadetblue; /* Black fallback color */
